--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -1,6 +1,6 @@
 .hero {
   position: fixed;
-  background: #c62641;
+  background: #b20303;
   z-index: 1;
   top: 0;
   left: 0;
