--- a/src/components/PostListing/postlisting.module.scss
+++ b/src/components/PostListing/postlisting.module.scss
@@ -1,7 +1,8 @@
 .post-listing-wrapper {
   background: #fefefe;
   padding-top: 5rem;
-  max-width: 1130px;
+  max-width: 100%;
+  width: 100%;
   margin: 0 auto;
   box-shadow: 0 30px 50px 0 rgba(1, 1, 1, 0.15);
   position: relative;
