--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -25,6 +25,11 @@
 
   code[class*='language-'] {
     padding: 0.25rem 0.5rem;
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
   }
 }
 
